--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,13 +7,24 @@ services:
       - "8080:8080"
     volumes:
       - ./app:/app
-      - ./config.json:/app/config.json
+      - ./config/DB.env:/app/DB.env
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 10s
+
+  db:
+    image: mysql:8.0
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    env_file:
+      - ./config/DB.env
+    volumes:
+      - ./mysql:/var/lib/mysql
+    ports:
+      - "3306:3306"
 
 volumes:
   app_data:
