--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ python-multipart # 파일 업로드 할때 필요한
 aiofiles # 파일 입출력 비동기 가능하게
 
 
-# alembic
-# aiomysql
+alembic
+aiomysql
 
-# sqlalchemy[asyncio]
-# cryptography==40.0.1
+sqlalchemy[asyncio]
+cryptography==40.0.1
