--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       - "8080:8080"
     volumes:
       - ./app:/app
-      - ./config/DB.env:/app/DB.env
+      - ./config/.env:/app/.env
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 30s
@@ -20,7 +20,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     env_file:
-      - ./config/DB.env
+      - ./config/.env
     volumes:
       - ./mysql:/var/lib/mysql
     ports:
