--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,12 +19,18 @@ services:
 
   db:
     image: mysql:8.0
-    command: --default-authentication-plugin=mysql_native_password
+    command: 
+      - --default-authentication-plugin=mysql_native_password
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
+      - --skip-character-set-client-handshake
+      - --innodb-flush-log-at-trx-commit=0
     restart: always
     env_file:
       - ./config/.env
     volumes:
       - ./mysql:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql  # 초기 데이터 SQL 파일 추가
     ports:
       - "3306:3306"
     healthcheck:
@@ -32,6 +38,10 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    environment:
+      - MYSQL_CHARACTER_SET_SERVER=utf8mb4
+      - MYSQL_COLLATION_SERVER=utf8mb4_unicode_ci
+      - MYSQL_INIT_CONNECT=SET NAMES utf8mb4 COLLATE utf8mb4_unicode_ci
 
 volumes:
   app_data:
